--- a/index.html
+++ b/index.html
@@ -18,6 +18,28 @@
             <li><button>Sign In</button></li>
         </ul>
     </header>
+
+ <!-- Main Content -->
+ <section class="main-content">
+    <div class="content-container">
+         <img class="logo-image" src="img/google.png" alt="google logo">
+          <!-- Search Bar -->
+         <form class="search-bar" action="https://www.google.com/search">
+            <img src="img/search.png" alt="search icon">
+            <input type="text" name="q">
+            <img src="img/mic.png" alt="mic icon">
+            <img src="img/lens.png" alt="lens icon">
+         </form>
+         <div class="action-buttons">
+            <button class="google-search-btn">Google Search</button>
+            <button class="lucky-search-btn">I'm Feeling Lucky</button>
+         </div>
+         <div class="language-selector">
+            <p><span>Google Offered in: </span><a href="#">සිංහල</a> <a href="#">தமிழ்</a></p>
+         </div>
+    </div>
+</section>
+
 	
 
  </body>
