--- a/index.html
+++ b/index.html
@@ -40,6 +40,28 @@
     </div>
 </section>
 
+<!-- Footer --> 
+<footer>
+    <div class="footer-content upper-footer">
+        <p> Sri Lanka</p>
+    </div>
+    
+    <div class="footer-content lower-footer">
+        <ul class="lower-left-footer">
+            <li><a href="#">About</a></li>
+			<li><a href="#">Advertising</a></li>
+            <li><a href="#">Business</a></li>
+            <div><li><a href="#">How Search Works</a></li></div>   
+        </ul>
+        
+        <ul class="lower-right-footer">
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Settings</a></li>
+        </ul>
+    </div>
+ </footer>
+
 	
 
  </body>
