--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <li><a href="#">About</a></li>
 			<li><a href="#">Advertising</a></li>
             <li><a href="#">Business</a></li>
-            <div><li><a href="#">How Search Works</a></li></div>   
+            <li><a href="#">How Search Works</a></li>   
         </ul>
         
         <ul class="lower-right-footer">
